infrastructure/docker-storage.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: container-registry
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  namespace: container-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
      - name: registry
        image: registry:2
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: data
          mountPath: /var/lib/registry
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: registry-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: container-registry
spec:
  type: ClusterIP
  clusterIP: 10.96.100.1 # This must be static. Containerd does not see ingress hostnames.
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: docker-registry
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: docker-registry
  namespace: container-registry
spec:
  hosts:
  - "registry.homelab"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: docker-registry
        port:
          number: 80
    corsPolicy:
      allowOrigins:
      - exact: https://registry-ui.homelab
      allowMethods:
      - GET
      - PUT
      - POST
      - DELETE
      - PATCH
      - OPTIONS
      allowHeaders:
      - DNT
      - X-CustomHeader
      - Keep-Alive
      - User-Agent
      - X-Requested-With
      - If-Modified-Since
      - Cache-Control
      - Content-Type
      - Authorization
      - Accept
      exposeHeaders:
      - Docker-Content-Digest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry-ui
  namespace: container-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: docker-registry-ui
  template:
    metadata:
      labels:
        app: docker-registry-ui
    spec:
      containers:
      - name: ui
        image: joxit/docker-registry-ui:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
  namespace: container-registry
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: docker-registry-ui
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: docker-registry-ui
  namespace: container-registry
spec:
  hosts:
  - "registry-ui.homelab"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: docker-registry-ui
        port:
          number: 80
