infrastructure/payment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: default
  labels:
    app: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      # WSPÓŁDZIELONY WOLUMEN W PAMIĘCI
      volumes:
        - name: pyroscope-agent
          emptyDir: {}
          
      # INIT CONTAINER: Pobiera agenta zanim wystartuje Spring
      containers:
      - name: payment-service
        image: registry.homelab/payment-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        
        # PODPIĘCIE AGENTA DO GŁÓWNEGO KONTENERA
        volumeMounts:
          - name: pyroscope-agent
            mountPath: /agent
            
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  namespace: default
  labels:
    app: payment-service
spec:
  selector:
    app: payment-service
  ports:
  - name: http
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: payment-service-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "homelab-ca-issuer"
spec:
  tls:
    - hosts:
        - payment.homelab
      secretName: payment-tls-secret
  rules:
  - host: payment.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 8080
